// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Requires an empty line before a comment 1`] = `
"
    a {}

    /* comment */
  "
`;

exports[`Requires an empty line before custom properties 1`] = `
"
    a {
      --foo: pink;
      --bar: red;

      top: 10px;
    }
  "
`;

exports[`Requires color to be short 1`] = `
"
    $color: #fff;
  "
`;

exports[`Requires whitespaces before and after the comment 1`] = `
"
    /* comment */
  "
`;
